     - Show examples for OpenType font features
     - Allow selecting OpenType font variations
     - Support levels of details for selection
    + New Emoji features:
     - Support a completion popup for Emoji
     - Drop Ctrl-Shift-e shortcut
    + Other new apis:
     - gdk_window_move_to_rect
  * debian/patches/m4macros-Set-a-serial-number.patch: Drop, included in this
    release.

 -- Iain Lane <laney@debian.org>  Wed, 18 Jul 2018 14:08:52 +0100

gtk+3.0 (3.22.30-2) unstable; urgency=medium

  * Team upload

  [ Jeremy Bicha ]
  * Bump minimum wayland-protocols to 1.12

  [ Simon McVittie ]
  * d/p/m4macros-Set-a-serial-number.patch:
    Add patch from upstream to give gtk-3.0.m4 a serial number so that
    it will override older copies bundled with other packages, typically
    in the m4 directory (GTK+ 3 version of #895018)

 -- Simon McVittie <smcv@debian.org>  Wed, 27 Jun 2018 09:55:28 +0100

gtk+3.0 (3.22.30-1) unstable; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release
  * Drop patches applied in new release (numbered 0009-0016)

  [ Simon McVittie ]
  * d/p/022_disable-viqr-im-for-vi-locale.patch:
    Add reference to Ubuntu bug 191451, summarize the reason why this
    is applied, and correctly attribute the patch to Ming Hua
    (see #895043)

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 16 Apr 2018 19:55:32 -0400

gtk+3.0 (3.22.29-3) unstable; urgency=medium

  * Team upload
  * Allow stderr in autopkgtests. They produce harmless diagnostics.
  * d/p/0013-wayland-Drop-cairo-surfaces-when-withdrawing.patch:
    Add patch from upstream fixing a Wayland client crash if it unmaps
    a window while gdk is processing updates
  * d/p/0014-AM_PATH_GTK_3_0-Use-AC_PATH_TOOL-to-find-pkg-config.patch,
    d/p/0015-m4macros-Fix-underquoting-in-AC_PATH_TOOL.patch:
    Use AC_PATH_TOOL to find pkg-config in the deprecated AM_PATH_GTK_3_0
    macro (Closes: #894069)
  * d/p/0016-imwayland-destroy-objects-only-if-it-matches-our-man.patch: