@@ -13,11 +13,11 @@ Build-Depends: debhelper (>= 10.3~),
                at-spi2-core <!nocheck>,
                libglib2.0-dev (>= 2.49.4),
                libgdk-pixbuf2.0-dev (>= 2.30.0),
-               libpango1.0-dev (>= 1.40.5),
+               libpango1.0-dev (>= 1.41.0),
                libatk1.0-dev (>= 2.15.1),
                libatk-bridge2.0-dev,
                libegl1-mesa-dev [linux-any],
-               libepoxy-dev,
+               libepoxy-dev (>= 1.4),
                libfontconfig1-dev,
                libharfbuzz-dev (>= 0.9),
                libwayland-dev (>= 1.9.91) [linux-any],
@@ -137,7 +137,7 @@ Depends: @SHARED_PKG@ (= ${binary:Version}),
          ${shlibs:Depends},
          libglib2.0-dev (>= 2.49.4),
          libgdk-pixbuf2.0-dev (>= 2.30.0),
-         libpango1.0-dev (>= 1.40.5),
+         libpango1.0-dev (>= 1.41),
          libatk1.0-dev (>= 2.15.1),
          libatk-bridge2.0-dev,
          libcairo2-dev (>= 1.14.0),
